Fixed more styling for mobile, also fixed the context menu not appearing on iOS for file items, still need to add the fix to folders, and quickitems

--- a/src/styles/components/_ContentMenu.scss
+++ b/src/styles/components/_ContentMenu.scss
@@ -16,6 +16,13 @@
         width: 99%;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
     }
 }
 
