--- a/src/styles/components/_Sharemenu.scss
+++ b/src/styles/components/_Sharemenu.scss
@@ -22,6 +22,7 @@
        width: 100%;
        height: 100%;
        top: 0;
+       z-index: 2;
     }
 }
 
