--- a/src/styles/components/_Spacer.scss
+++ b/src/styles/components/_Spacer.scss
@@ -16,4 +16,10 @@
     font-weight: 500;
     font-size: 13px;
     margin-left: 38px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
